# si2-breakout

./: .gitignore  README.md  pyproject.toml  requirements-rl.txt
agents/: base_agent.py  dummy_agent.py  manual_agent.py
breakout_rl/: constants.py
breakout_rl/agents/: dqn_agent.py  networks.py  planner.py  qr_dqn_agent.py  replay.py
breakout_rl/configs/: aim.yaml  aim_qr.yaml  flat_dqn.yaml
breakout_rl/controllers/: aim_controller.py
breakout_rl/deploy/: trained_agent.py
breakout_rl/env/: breakout_env.py  high_level_env.py  observation.py  rewards.py
breakout_rl/eval/: evaluate.py  metrics.py  plot_curves.py  probe_aiming_authority.py
breakout_rl/physics/: clone.py  predictor.py
breakout_rl/train/: curriculum.py  early_stop.py  train_aim.py  train_dqn.py
checkpoints/: comparison.csv  m3_probe_results.txt
checkpoints/aim_smdp/: log.csv  online_final.pt
checkpoints/aim_smdp_qr/: log.csv  online_final.pt
checkpoints/flat_dqn/: log.csv  online_final.pt
docs/: HANDOFF.md
docs/superpowers/plans/: 2026-06-16-breakout-hierarchical-rl.md
scripts/: planner_analysis.py  record_commit.py  train_seeds.sh
server/: logic.py  server.py
tests/: test_aim_controller.py  test_breakout_env.py  test_clone.py  test_constants.py  test_curriculum.py  test_dqn_agent.py  test_early_stop.py  test_high_level_env.py  test_logic.py  test_metrics.py  test_networks.py  test_observation.py  test_observation_parity.py  test_planner.py  test_predictor.py  test_qr_dqn.py  test_replay.py  test_rewards.py
(+1 files in other folders)
