[project]
name = "p2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ai-game-framework>=1.1.0",
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pytest>=9.1.0",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "websockets>=16.0",
]
